# merstab-protocol

./: Anchor.toml  README.md  package-lock.json  package.json
cpi-interface/: Cargo.toml
keypair/: depositor.json  depositor2.json  depositor2pair.ts  depositorpair.ts  index.ts  manager.json  managerpair.ts
programs/m-protocol/: Cargo.toml
programs/m-protocol/src/: constants.rs  error.rs  lib.rs
programs/m-protocol/src/instructions/: mod.rs
programs/m-protocol/src/instructions/mango_ix/: close_mango_account.rs  create_mango_account.rs  delegate_mango_account.rs  deposit_to_mango.rs  mod.rs  withdraw_from_mango.rs
programs/m-protocol/src/instructions/mango_ix/cpi/: mango_cpi.rs  mod.rs
programs/m-protocol/src/instructions/vault/: clear_stake_request.rs  clear_unstake_request.rs  create_user_vault_account.rs  create_vault.rs  deposit_to_user_vault_account.rs  mod.rs  process_stake.rs  process_unstake.rs  request_to_stake.rs  request_to_unstake.rs  update_stake_request.rs  update_unstake_request.rs  update_user_balance.rs  update_vault_balance.rs  update_vault_limit.rs  withdraw_from_user_vault_account.rs
programs/m-protocol/src/state/: vault.rs
tests/: mango.ts  utils.ts
wallet/: user.json
