[package]
name = "m-protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "m_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program=">=1.9.0"
anchor-lang = {version="0.25.0", features=["anchor-debug"]}
solana-gateway = "0.2.2"
anchor-spl = {version = "0.25.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
rust_decimal = { git = "https://github.com/zetamarkets/rust-decimal.git", features = ["maths"] }
mango = { version = "^3.6.2", git = "https://github.com/blockworks-foundation/mango-v3", default-features=false,  features = ["no-entrypoint"] }
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
# mango-common = { git = "https://github.com/blockworks-foundation/mango-v3"}
